[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/BreatheFireIII_Font_L.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Art/QuitButton/TP_Quit.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/OptionsButton/TP_Options.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/StartButton/TP_Start.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Menu.tres" type="Material" id=6]
[ext_resource path="res://Assets/Art/StartButton/TP_Start_H.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/QuitButton/TP_Quit_H.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/OptionsButton/TP_Options_H.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sounds/SFX_ButtonClick.tres" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sounds/SFX_ButtonHover.tres" type="AudioStream" id=11]
[ext_resource path="res://Menu/SceneTransition.tscn" type="PackedScene" id=12]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 88.0
margin_top = 67.0
margin_right = 883.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 2 )
text = "The Protagonist"

[node name="MenuOptions" type="VBoxContainer" parent="."]
margin_left = 192.0
margin_top = 509.0
margin_right = 587.0
margin_bottom = 1027.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
size_flags_stretch_ratio = 0.0
custom_constants/separation = 50
alignment = 1

[node name="Start" type="TextureButton" parent="MenuOptions"]
material = ExtResource( 6 )
margin_top = 74.0
margin_right = 395.0
margin_bottom = 164.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )

[node name="Options" type="TextureButton" parent="MenuOptions"]
material = ExtResource( 6 )
margin_top = 214.0
margin_right = 395.0
margin_bottom = 304.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 9 )

[node name="Quit" type="TextureButton" parent="MenuOptions"]
material = ExtResource( 6 )
margin_top = 354.0
margin_right = 395.0
margin_bottom = 444.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 8 )

[node name="SFX_ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="SFX_ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="TransitionScreen" parent="." instance=ExtResource( 12 )]
layer = 4

[connection signal="mouse_entered" from="MenuOptions/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="pressed" from="MenuOptions/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="MenuOptions/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="pressed" from="MenuOptions/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="MenuOptions/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="MenuOptions/Quit" to="." method="_on_Quit_pressed"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
